--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ header {
   padding: 1rem;
   display: flex;
   justify-content: space-between;
-  align-items: center;
   animation: fadeIn 1s;
 }
 header h1 {
@@ -76,9 +75,7 @@ ul li::marker {
   color: #2563EB;
 }
 form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  display: none; /* Форма убрана */
 }
 input {
   padding: 0.5rem;
@@ -104,12 +101,13 @@ button:hover {
   background-position: 100% 0;
 }
 img.avatar {
-  width: 100px;
-  max-width: 100%;
-  object-fit: contain;
+  width: 175px;
+  height: 175px;
+  object-fit: cover;
   border-radius: 50%;
-  object-position: 70% 70%;
+  object-position: 50% 10%;
 }
+
 footer {
   background-color: #1F2937;
   color: #FFFFFF;
@@ -153,11 +151,7 @@ a:hover {
     height: auto;
     object-position: 70% 70%;
   }
+  .quote {
+    padding: 0.5rem;
+  }
 }
-
-img.avatar {
-  width: 175px;
-  height: 175px;
-  object-fit: cover;
-  border-radius: 50%;
-  object-position: 50% 10%;
